Sort out white space under footer issue on all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,15 @@
 /* General */
 
+html,
 body {
-    background-color: rgb(252, 243, 211)
+    margin: 0;
+}
+
+body {
+    background-color: rgb(252, 243, 211);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 main {
@@ -149,6 +157,10 @@ p {
 
 /* Contact Form */
 
+#contact-form {
+    padding: 10px;
+}
+
 input,
 textarea {
     margin: 0 auto;
@@ -164,13 +176,13 @@ textarea {
 
 /* Footer */
 
-footer {
-    margin: 0;
-    padding: 0;
-    height: 12rem;
+.footer-container {
+    display: block;
+    width: 100%;
+    height: 10rem;
     background-color: black;
     color: white;
-    display: block;
+    margin-top: auto;
 }
 
 .logo {
